# streamweave-attractor

./: .cursorignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  devenv.nix  devenv.yaml  flake.nix  package-lock.json  package.json  rustfmt.toml  treefmt.ci.toml  treefmt.toml
.attractor/: checkpoint.json
.cursor/: hooks.json  mcp.json
.cursor/agents/: beads-planner.md  beads-worker.md  improver.md
.cursor/commands/: activate.md  bd.md  debate.md  mcp-debug.md  networking.md  pre-push.md  quality.md  rust.md  serena.md
.cursor/hooks/: enforce-devenv.sh  format-after-edit.sh
.cursor/rules/: beads.mdc  mcp-servers.mdc  session-completion.mdc  shell.mdc
.cursor/skills/: networking-standards.md  rust-coding-standards.md
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflows/: ci.yml  publish.yml  rebase-branches.yml
docs/: attractor-as-streamweave-graph.md
examples/: run_dot.rs  simple_pipeline.rs
examples/workflows/: README.md  ai-feature.dot  beads-worker-loop.dot  pre-push.dot  test_out_error.dot  test_success_only.dot
history/: FEATURE-checkpoint-persist-resume.md  coverage-exclusions.md  execution-log-single-source-plan.md  fix-retry-cycles-design.md
src/: agent_run.rs  checkpoint_io.rs  checkpoint_io_test.rs  compiler.rs  compiler_test.rs  dot_parser.rs  dot_parser_test.rs  execution_log_io.rs  graph.rs  graph_test.rs  graphs.rs  lib.rs  runner.rs  runner_test.rs
src/nodes/: apply_context_updates.rs  apply_context_updates_test.rs  check_goal_gates.rs  check_goal_gates_test.rs  codergen_node.rs  create_checkpoint.rs  create_checkpoint_test.rs  exec_node.rs  execute_handler.rs  execute_handler_test.rs  execution_loop.rs  execution_loop_test.rs  find_start.rs  find_start_test.rs  fix_node.rs  fix_node_test.rs  identity_node.rs  init_context.rs  init_context_test.rs  mod.rs  outcome_router_node.rs  parse_dot.rs  parse_dot_test.rs  select_edge.rs  select_edge_test.rs  unit_source_node.rs  validate_graph.rs  validate_graph_test.rs
src/types/: attractor_edge.rs  attractor_edge_test.rs  attractor_graph.rs  attractor_graph_test.rs  attractor_node.rs  attractor_node_test.rs  checkpoint.rs  checkpoint_test.rs  execution_log.rs  execution_state.rs  execution_state_test.rs  graph_payload.rs  graph_payload_test.rs  mod.rs  node_outcome.rs  node_outcome_test.rs  outcome_status.rs  outcome_status_test.rs  resume_state.rs  resume_state_test.rs
tests/: integration.rs  run_dot_integration.rs
tests/integration/: README.md  exec_fail_exit.dot  minimal.dot  pre_push_exec_only.dot  test_success_only.dot
