[package]
name = "streamweave-attractor"
version = "0.9.0"
edition = "2021"
authors = ["Tom Wieland <tom.wieland@gmail.com>"]
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/streamweave-attractor"
homepage = "https://github.com/Industrial/streamweave-attractor"
documentation = "https://docs.rs/streamweave-attractor"
description = "Composable, async, stream-first computation in pure Rust"
keywords = ["stream", "async", "pipeline", "data-processing"]
categories = ["asynchronous", "data-structures"]

[dependencies]
streamweave = "0.9"
tracing = "0.1"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.10"
tokio-test = "0.4.2"
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = "0.3"

[lints.rust]
# Shared lint configuration
