[package]
name = "streamweave-attractor"
version = "0.1.5"
edition = "2024"
authors = ["Tom Wieland <tom.wieland@gmail.com>"]
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/streamweave-attractor"
homepage = "https://github.com/Industrial/streamweave-attractor"
documentation = "https://docs.rs/streamweave-attractor"
description = "Attractor pipeline as a StreamWeave graph"
keywords = ["stream", "async", "pipeline", "attractor"]
categories = ["asynchronous", "data-structures"]

[dependencies]
# Pin to fixed version for RUSTSEC-2026-0007 (BytesMut::reserve integer overflow)
clap = { version = "4", features = ["derive"] }
bytes = ">=1.11.1"
streamweave = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "simple_pipeline"

[[bin]]
name = "run_dot"
path = "src/bin/run_dot.rs"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.10"
tokio-test = "0.4.2"
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = "0.3"

[lints.rust]
# Shared lint configuration
